OO-4582: New calculation methods of points and passed of a course